--- a/index.html
+++ b/index.html
@@ -284,7 +284,15 @@
 
     <!-- Full Screen Embedded URL -->
     <div class='fullscreen-container'>
-        <iframe allow='clipboard-write; clipboard-read' allowfullscreen='true' class='fullscreen-iframe' frameborder='0' id='main-iframe' mozallowfullscreen='true' onerror='iframeError()' onload='iframeLoaded()' sandbox='allow-scripts allow-same-origin allow-forms allow-popups allow-modals allow-presentation' src='https://script.google.com/macros/s/AKfycbzNseQCiulRZ9C3JeCB_lSSMML8ZsIHo9S-6ulDvYzXCQfX_cSPpXJ1lViftFAfbfT5/exec' style='opacity: 0; transition: opacity 0.3s ease-in;' title='Aplikasi TegalsariDigital - Data Warga RT 01/RW 08' webkitallowfullscreen='true'>
+        <iframe allow='geolocation; clipboard-write; clipboard-read' 
+            allowfullscreen='true' 
+            class='fullscreen-iframe' 
+            frameborder='0' 
+            id='main-iframe' 
+            sandbox='allow-scripts allow-same-origin allow-forms allow-popups allow-modals allow-presentation' 
+            src='https://script.google.com/macros/s/AKfycbzNseQCiulRZ9C3JeCB_lSSMML8ZsIHo9S-6ulDvYzXCQfX_cSPpXJ1lViftFAfbfT5/exec' 
+            style='opacity: 0; transition: opacity 0.3s ease-in;' 
+            title='Aplikasi TegalsariDigital'>
         </iframe>
     </div>
 
@@ -491,4 +499,5 @@
     </script>
 </body>
 </html>
+
 
